# Passport

./: .gitignore  pyproject.toml  wsgi.py
passport/: accounts.py  app.py  data.py  home.py  logger.py  settings.py
passport/static/: accounts.js
passport/static/styles/: style.css
passport/templates/: accounts.html  add.html  base.html  home.html  raffle.html
